@@ -90,6 +90,7 @@ gnutls_pubkey_export_ecc_raw2: Added
 gnutls_privkey_export_rsa_raw2: Added
 gnutls_privkey_export_dsa_raw2: Added
 gnutls_privkey_export_ecc_raw2: Added
+gnutls_priority_set2: Added
 GNUTLS_EXPORT_FLAG_NO_LZ: Added
 GNUTLS_DT_IP_ADDRESS: Added
 GNUTLS_X509_CRT_FLAG_IGNORE_SANITY: Added
